@@ -1,95 +1,96 @@
 package com.openmailer.openmailer.controller;
 
+import com.openmailer.openmailer.model.Contact;
+import com.openmailer.openmailer.model.ContactList;
+import com.openmailer.openmailer.model.User;
+import com.openmailer.openmailer.repository.ContactListRepository;
+import com.openmailer.openmailer.security.CustomUserDetails;
+import com.openmailer.openmailer.service.contact.ContactImportService;
+import com.openmailer.openmailer.service.contact.ContactService;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-import java.util.*;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Controller
 @RequestMapping("/contacts")
 public class ContactsController {
 
+    private static final DateTimeFormatter DATE_TIME_FORMAT = DateTimeFormatter.ofPattern("dd MMM yyyy, HH:mm");
+    private final ContactService contactService;
+    private final ContactImportService contactImportService;
+    private final ContactListRepository contactListRepository;
+
+    public ContactsController(
+        ContactService contactService,
+        ContactImportService contactImportService,
+        ContactListRepository contactListRepository
+    ) {
+        this.contactService = contactService;
+        this.contactImportService = contactImportService;
+        this.contactListRepository = contactListRepository;
+    }
+
     @GetMapping
     public String list(
-            @RequestParam(required = false) String status,
-            @RequestParam(required = false) String tag,
-            @RequestParam(required = false) String search,
-            Model model) {
+        @RequestParam(required = false) String status,
+        @RequestParam(required = false) String tag,
+        @RequestParam(required = false) String search,
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        Model model
+    ) {
+        String userId = userDetails.getUser().getId();
+        List<Contact> userContacts = contactService.findByUserId(userId);
 
         model.addAttribute("pageTitle", "Contacts - OpenMailer");
-
-        // Stats summary
-        model.addAttribute("totalContacts", 15842);
-        model.addAttribute("subscribedContacts", 14523);
-        model.addAttribute("unsubscribedContacts", 892);
-        model.addAttribute("bouncedContacts", 427);
-
-        // Filter options
-        List<Map<String, String>> statusFilters = Arrays.asList(
+        model.addAttribute("totalContacts", contactService.countByUserId(userId));
+        model.addAttribute("subscribedContacts", contactService.countByStatus(userId, "SUBSCRIBED"));
+        model.addAttribute("unsubscribedContacts", contactService.countByStatus(userId, "UNSUBSCRIBED"));
+        model.addAttribute("bouncedContacts", contactService.countByStatus(userId, "BOUNCED"));
+        model.addAttribute("statusFilters", List.of(
             Map.of("value", "", "label", "All Statuses"),
             Map.of("value", "SUBSCRIBED", "label", "Subscribed"),
             Map.of("value", "UNSUBSCRIBED", "label", "Unsubscribed"),
             Map.of("value", "PENDING", "label", "Pending"),
             Map.of("value", "BOUNCED", "label", "Bounced")
-        );
-        model.addAttribute("statusFilters", statusFilters);
-
-        List<Map<String, String>> tagFilters = Arrays.asList(
-            Map.of("value", "", "label", "All Tags"),
-            Map.of("value", "VIP", "label", "VIP"),
-            Map.of("value", "Newsletter", "label", "Newsletter"),
-            Map.of("value", "Customer", "label", "Customer"),
-            Map.of("value", "Lead", "label", "Lead")
-        );
-        model.addAttribute("tagFilters", tagFilters);
-
+        ));
+        model.addAttribute("tagFilters", buildTagFilters(userContacts));
         model.addAttribute("currentStatus", status != null ? status : "");
         model.addAttribute("currentTag", tag != null ? tag : "");
         model.addAttribute("searchQuery", search != null ? search : "");
-
-        // Contact list
-        List<Map<String, Object>> contacts = createSampleContacts();
-
-        // Filter by status if provided
-        if (status != null && !status.isEmpty()) {
-            contacts = contacts.stream()
-                .filter(c -> status.equals(c.get("status")))
-                .collect(Collectors.toList());
-        }
-
-        // Filter by tag if provided
-        if (tag != null && !tag.isEmpty()) {
-            contacts = contacts.stream()
-                .filter(c -> {
-                    @SuppressWarnings("unchecked")
-                    List<String> tags = (List<String>) c.get("tags");
-                    return tags.contains(tag);
-                })
-                .collect(Collectors.toList());
-        }
-
-        // Filter by search if provided
-        if (search != null && !search.isEmpty()) {
-            String searchLower = search.toLowerCase();
-            contacts = contacts.stream()
-                .filter(c ->
-                    ((String)c.get("name")).toLowerCase().contains(searchLower) ||
-                    ((String)c.get("email")).toLowerCase().contains(searchLower)
-                )
-                .collect(Collectors.toList());
-        }
-
-        model.addAttribute("contacts", contacts);
-
-        // Pagination
+        model.addAttribute("contacts", userContacts.stream()
+            .map(this::toSummaryView)
+            .filter(contact -> status == null || status.isBlank() || status.equals(contact.status()))
+            .filter(contact -> tag == null || tag.isBlank() || contact.tags().contains(tag))
+            .filter(contact -> matchesSearch(contact, search))
+            .sorted(Comparator.comparing(ContactSummaryView::sortDate, Comparator.nullsLast(Comparator.reverseOrder())))
+            .toList());
         model.addAttribute("currentPage", 1);
-        model.addAttribute("totalPages", 5);
-        model.addAttribute("pages", Arrays.asList(1, 2, 3, 4, 5));
+        model.addAttribute("totalPages", 1);
+        model.addAttribute("pages", Collections.singletonList(1));
 
         return "contacts/list";
     }
@@ -98,135 +99,343 @@ public class ContactsController {
     public String add(Model model) {
         model.addAttribute("pageTitle", "Add Contact - OpenMailer");
         model.addAttribute("mode", "add");
+        model.addAttribute("contactForm", new ContactForm());
         return "contacts/form";
     }
 
+    @PostMapping
+    public String create(
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        @ModelAttribute ContactForm contactForm,
+        RedirectAttributes redirectAttributes
+    ) {
+        Contact saved = contactService.createContact(toEntity(contactForm, userDetails.getUser()));
+        redirectAttributes.addFlashAttribute("successMessage", "Contact created successfully.");
+        return "redirect:/contacts/" + saved.getId();
+    }
+
     @GetMapping("/import")
-    public String importContacts(Model model) {
+    public String importContacts(
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        Model model
+    ) {
         model.addAttribute("pageTitle", "Import Contacts - OpenMailer");
-
-        // Import history
-        List<Map<String, Object>> importHistory = new ArrayList<>();
-
-        Map<String, Object> import1 = new HashMap<>();
-        import1.put("id", "1");
-        import1.put("fileName", "subscribers_2024_12.csv");
-        import1.put("status", "COMPLETED");
-        import1.put("total", 1234);
-        import1.put("successful", 1180);
-        import1.put("failed", 54);
-        import1.put("date", "2024-12-20 14:30");
-        importHistory.add(import1);
-
-        Map<String, Object> import2 = new HashMap<>();
-        import2.put("id", "2");
-        import2.put("fileName", "newsletter_list.csv");
-        import2.put("status", "COMPLETED");
-        import2.put("total", 892);
-        import2.put("successful", 892);
-        import2.put("failed", 0);
-        import2.put("date", "2024-12-18 10:15");
-        importHistory.add(import2);
-
-        Map<String, Object> import3 = new HashMap<>();
-        import3.put("id", "3");
-        import3.put("fileName", "customer_emails.xlsx");
-        import3.put("status", "FAILED");
-        import3.put("total", 0);
-        import3.put("successful", 0);
-        import3.put("failed", 0);
-        import3.put("date", "2024-12-15 16:45");
-        importHistory.add(import3);
-
-        model.addAttribute("importHistory", importHistory);
-
+        model.addAttribute("hasImportCapability", contactImportService != null);
+        model.addAttribute("listOptions", contactListRepository.findByUser_Id(userDetails.getUser().getId()));
         return "contacts/import";
     }
 
     @GetMapping("/{id}")
-    public String view(@PathVariable String id, Model model) {
+    public String view(
+        @PathVariable String id,
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        Model model
+    ) {
+        Contact contact = contactService.findByIdAndUserId(id, userDetails.getUser().getId());
         model.addAttribute("pageTitle", "Contact Details - OpenMailer");
-        model.addAttribute("contact", getContactById(id));
-
-        // Contact activity
-        List<Map<String, Object>> activity = new ArrayList<>();
-
-        Map<String, Object> activity1 = new HashMap<>();
-        activity1.put("type", "OPENED");
-        activity1.put("campaign", "Summer Sale 2024");
-        activity1.put("date", "2024-12-20 09:15");
-        activity1.put("icon", "mail-open");
-        activity.add(activity1);
-
-        Map<String, Object> activity2 = new HashMap<>();
-        activity2.put("type", "CLICKED");
-        activity2.put("campaign", "Newsletter #42");
-        activity2.put("link", "https://example.com/product");
-        activity2.put("date", "2024-12-18 14:42");
-        activity2.put("icon", "cursor");
-        activity.add(activity2);
-
-        Map<String, Object> activity3 = new HashMap<>();
-        activity3.put("type", "SUBSCRIBED");
-        activity3.put("source", "Website Form");
-        activity3.put("date", "2024-12-01 11:20");
-        activity3.put("icon", "user-plus");
-        activity.add(activity3);
-
-        model.addAttribute("activity", activity);
-
-        // Engagement stats
-        model.addAttribute("totalEmailsReceived", 24);
-        model.addAttribute("totalOpened", 18);
-        model.addAttribute("totalClicked", 12);
-        model.addAttribute("openRate", "75.0%");
-        model.addAttribute("clickRate", "50.0%");
-
+        model.addAttribute("contact", toDetailView(contact));
         return "contacts/view";
     }
 
     @GetMapping("/{id}/edit")
-    public String edit(@PathVariable String id, Model model) {
+    public String edit(
+        @PathVariable String id,
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        Model model
+    ) {
         model.addAttribute("pageTitle", "Edit Contact - OpenMailer");
         model.addAttribute("mode", "edit");
-        model.addAttribute("contact", getContactById(id));
+        model.addAttribute("contactForm", toForm(contactService.findByIdAndUserId(id, userDetails.getUser().getId())));
         return "contacts/form";
     }
 
-    private List<Map<String, Object>> createSampleContacts() {
-        List<Map<String, Object>> contacts = new ArrayList<>();
-
-        for (int i = 1; i <= 20; i++) {
-            Map<String, Object> contact = new HashMap<>();
-            contact.put("id", String.valueOf(i));
-            contact.put("name", "Contact " + i);
-            contact.put("email", "contact" + i + "@example.com");
-            contact.put("status", i % 4 == 0 ? "UNSUBSCRIBED" : (i % 3 == 0 ? "PENDING" : "SUBSCRIBED"));
-            contact.put("subscribedDate", "2024-" + String.format("%02d", (i % 12) + 1) + "-" + String.format("%02d", (i % 28) + 1));
-
-            // Assign tags based on patterns
-            List<String> tags = new ArrayList<>();
-            if (i % 5 == 0) tags.add("VIP");
-            if (i % 2 == 0) tags.add("Newsletter");
-            if (i % 3 == 0) tags.add("Customer");
-            if (i % 7 == 0) tags.add("Lead");
-            if (tags.isEmpty()) tags.add("General");
-            contact.put("tags", tags);
-
-            contact.put("company", i % 3 == 0 ? "Company " + i : "");
-            contact.put("phone", i % 2 == 0 ? "+1 555-" + String.format("%04d", i * 100) : "");
-            contact.put("country", i % 3 == 0 ? "USA" : (i % 3 == 1 ? "UK" : "Canada"));
-
-            contacts.add(contact);
-        }
-
-        return contacts;
+    @PostMapping("/{id}/edit")
+    public String update(
+        @PathVariable String id,
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        @ModelAttribute ContactForm contactForm,
+        RedirectAttributes redirectAttributes
+    ) {
+        contactService.updateContact(id, userDetails.getUser().getId(), toEntity(contactForm, userDetails.getUser()));
+        redirectAttributes.addFlashAttribute("successMessage", "Contact updated successfully.");
+        return "redirect:/contacts/" + id;
     }
 
-    private Map<String, Object> getContactById(String id) {
-        return createSampleContacts().stream()
-            .filter(c -> id.equals(c.get("id")))
-            .findFirst()
-            .orElse(createSampleContacts().get(0));
+    private List<Map<String, String>> buildTagFilters(List<Contact> contacts) {
+        Set<String> tags = contacts.stream()
+            .map(Contact::getTags)
+            .filter(Objects::nonNull)
+            .flatMap(Arrays::stream)
+            .map(String::trim)
+            .filter(tag -> !tag.isEmpty())
+            .collect(Collectors.toCollection(TreeSet::new));
+
+        List<Map<String, String>> filters = new ArrayList<>();
+        filters.add(Map.of("value", "", "label", "All Tags"));
+        tags.forEach(tag -> filters.add(Map.of("value", tag, "label", tag)));
+        return filters;
+    }
+
+    private boolean matchesSearch(ContactSummaryView contact, String search) {
+        if (search == null || search.isBlank()) {
+            return true;
+        }
+        String query = search.toLowerCase(Locale.ROOT);
+        return contact.name().toLowerCase(Locale.ROOT).contains(query)
+            || contact.email().toLowerCase(Locale.ROOT).contains(query);
+    }
+
+    private ContactSummaryView toSummaryView(Contact contact) {
+        LocalDateTime sortDate = Optional.ofNullable(contact.getSubscribedAt()).orElse(contact.getCreatedAt());
+        return new ContactSummaryView(
+            contact.getId(),
+            buildContactName(contact),
+            contact.getEmail(),
+            contact.getStatus(),
+            normalizeTags(contact.getTags()),
+            extractCustomField(contact, "company"),
+            formatDate(sortDate),
+            sortDate
+        );
+    }
+
+    private ContactDetailView toDetailView(Contact contact) {
+        return new ContactDetailView(
+            contact.getId(),
+            buildContactName(contact),
+            contact.getEmail(),
+            contact.getStatus(),
+            normalizeTags(contact.getTags()),
+            extractCustomField(contact, "company"),
+            extractCustomField(contact, "phone"),
+            extractCustomField(contact, "country"),
+            formatDate(contact.getSubscribedAt()),
+            formatDate(contact.getCreatedAt()),
+            formatDate(contact.getConfirmedAt()),
+            formatDate(contact.getUpdatedAt()),
+            contact.getSource(),
+            Boolean.TRUE.equals(contact.getEmailVerified()),
+            Boolean.TRUE.equals(contact.getGdprConsent()),
+            contact.getBounceCount() != null ? contact.getBounceCount() : 0,
+            contact.getComplaintCount() != null ? contact.getComplaintCount() : 0,
+            contact.getUnsubscribeReason(),
+            contact.getNotes()
+        );
+    }
+
+    private ContactForm toForm(Contact contact) {
+        ContactForm form = new ContactForm();
+        form.id = contact.getId();
+        form.firstName = contact.getFirstName();
+        form.lastName = contact.getLastName();
+        form.email = contact.getEmail();
+        form.company = extractCustomField(contact, "company");
+        form.phone = extractCustomField(contact, "phone");
+        form.country = extractCustomField(contact, "country");
+        form.status = contact.getStatus();
+        form.tags = normalizeTags(contact.getTags());
+        form.notes = contact.getNotes();
+        form.gdprConsent = Boolean.TRUE.equals(contact.getGdprConsent());
+        return form;
+    }
+
+    private Contact toEntity(ContactForm form, User user) {
+        Contact contact = new Contact();
+        contact.setUser(user);
+        contact.setEmail(form.email != null ? form.email.trim() : null);
+        contact.setFirstName(blankToNull(form.firstName));
+        contact.setLastName(blankToNull(form.lastName));
+        contact.setStatus(blankToNull(form.status) != null ? form.status : "SUBSCRIBED");
+        contact.setNotes(blankToNull(form.notes));
+        contact.setGdprConsent(form.gdprConsent);
+        if (form.tags != null && !form.tags.isEmpty()) {
+            contact.setTags(form.tags.stream().filter(Objects::nonNull).filter(value -> !value.isBlank()).toArray(String[]::new));
+        }
+
+        Map<String, Object> customFields = new HashMap<>();
+        if (blankToNull(form.company) != null) {
+            customFields.put("company", form.company.trim());
+        }
+        if (blankToNull(form.phone) != null) {
+            customFields.put("phone", form.phone.trim());
+        }
+        if (blankToNull(form.country) != null) {
+            customFields.put("country", form.country.trim());
+        }
+        if (!customFields.isEmpty()) {
+            contact.setCustomFields(customFields);
+        }
+        return contact;
+    }
+
+    private String buildContactName(Contact contact) {
+        String fullName = Stream.of(contact.getFirstName(), contact.getLastName())
+            .filter(Objects::nonNull)
+            .map(String::trim)
+            .filter(value -> !value.isEmpty())
+            .collect(Collectors.joining(" "));
+        return fullName.isBlank() ? contact.getEmail() : fullName;
+    }
+
+    private List<String> normalizeTags(String[] tags) {
+        if (tags == null || tags.length == 0) {
+            return Collections.emptyList();
+        }
+        return Arrays.stream(tags)
+            .filter(Objects::nonNull)
+            .map(String::trim)
+            .filter(value -> !value.isEmpty())
+            .toList();
+    }
+
+    private String extractCustomField(Contact contact, String key) {
+        if (contact.getCustomFields() == null) {
+            return null;
+        }
+        Object value = contact.getCustomFields().get(key);
+        return value != null ? String.valueOf(value) : null;
+    }
+
+    private String formatDate(LocalDateTime value) {
+        return value != null ? value.format(DATE_TIME_FORMAT) : "Not recorded";
+    }
+
+    private String blankToNull(String value) {
+        return value == null || value.isBlank() ? null : value;
+    }
+
+    private record ContactSummaryView(
+        String id,
+        String name,
+        String email,
+        String status,
+        List<String> tags,
+        String company,
+        String subscribedDate,
+        LocalDateTime sortDate
+    ) {}
+
+    private record ContactDetailView(
+        String id,
+        String name,
+        String email,
+        String status,
+        List<String> tags,
+        String company,
+        String phone,
+        String country,
+        String subscribedDate,
+        String createdDate,
+        String confirmedDate,
+        String updatedDate,
+        String source,
+        boolean emailVerified,
+        boolean gdprConsent,
+        int bounceCount,
+        int complaintCount,
+        String unsubscribeReason,
+        String notes
+    ) {}
+
+    public static class ContactForm {
+        private String id;
+        private String firstName;
+        private String lastName;
+        private String email;
+        private String company;
+        private String phone;
+        private String country;
+        private String status = "SUBSCRIBED";
+        private List<String> tags = Collections.emptyList();
+        private String notes;
+        private boolean gdprConsent;
+
+        public String getId() {
+            return id;
+        }
+
+        public void setId(String id) {
+            this.id = id;
+        }
+
+        public String getFirstName() {
+            return firstName;
+        }
+
+        public void setFirstName(String firstName) {
+            this.firstName = firstName;
+        }
+
+        public String getLastName() {
+            return lastName;
+        }
+
+        public void setLastName(String lastName) {
+            this.lastName = lastName;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+
+        public String getCompany() {
+            return company;
+        }
+
+        public void setCompany(String company) {
+            this.company = company;
+        }
+
+        public String getPhone() {
+            return phone;
+        }
+
+        public void setPhone(String phone) {
+            this.phone = phone;
+        }
+
+        public String getCountry() {
+            return country;
+        }
+
+        public void setCountry(String country) {
+            this.country = country;
+        }
+
+        public String getStatus() {
+            return status;
+        }
+
+        public void setStatus(String status) {
+            this.status = status;
+        }
+
+        public List<String> getTags() {
+            return tags;
+        }
+
+        public void setTags(List<String> tags) {
+            this.tags = tags != null ? tags : Collections.emptyList();
+        }
+
+        public String getNotes() {
+            return notes;
+        }
+
+        public void setNotes(String notes) {
+            this.notes = notes;
+        }
+
+        public boolean isGdprConsent() {
+            return gdprConsent;
+        }
+
+        public void setGdprConsent(boolean gdprConsent) {
+            this.gdprConsent = gdprConsent;
+        }
     }
 }
